src/objects/REVVY__MnQuoteItem__c.object
<CustomObject>
    <fields>
        <fullName>REVVY__ContractPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Resolved Price</description>
        <inlineHelpText>Resolved Price</inlineHelpText>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__CostPrice__c</fullName>
        <description>Cost Price of a product in quote item</description>
        <inlineHelpText>Cost Price of a product in quote item</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Discount_Absolute__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total discount off of list price (e.g., $100 off).</description>
        <inlineHelpText>Total discount off of list price (e.g., $100 off).</inlineHelpText>
        <label>Manual Discount (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Discount_Type__c</fullName>
        <description>Determines whether the discount is based on percentage off (e.g., 20% off) or on an absolute amount off (e.g., $100 off).</description>
        <inlineHelpText>Determines whether the discount is based on percentage off (e.g., 20% off) or on an absolute amount off (e.g., $100 off).</inlineHelpText>
        <label>Manual Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage discount off of list price (e.g., 20% off).</description>
        <inlineHelpText>Percentage discount off of list price (e.g., 20% off).</inlineHelpText>
        <label>Man. Disc. (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Discountable__c</fullName>
        <description>Specifies If manual discount can be applied as defined in the Catalog.</description>
        <formula>REVVY__Catalog_Node__r.REVVY__Discountable__c</formula>
        <inlineHelpText>Specifies If manual discount can be applied as defined in the Catalog.</inlineHelpText>
        <label>Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__ErrorMessage__c</fullName>
        <description>Error Messages related to quote item</description>
        <inlineHelpText>&gt;Error Messages related to quote item</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Extended_Price_Display_F__c</fullName>
        <formula>REVVY__Unit_Price__c * REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price (Display)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Extended_Price_F__c</fullName>
        <description>Price after discount multiplied by quantity.</description>
        <formula>REVVY__Unit_Price__c * REVVY__Quantity__c</formula>
        <inlineHelpText>Price after discount multiplied by quantity.</inlineHelpText>
        <label>Ext. Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__FreezePricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Freezes the pricing and prevents manual discounts on this line.</description>
        <inlineHelpText>Freezes the pricing and prevents manual discounts on this line</inlineHelpText>
        <label>Freeze Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Frozen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if manual discount is allowed.</description>
        <inlineHelpText>Controls if manual discount is allowed.</inlineHelpText>
        <label>Frozen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__GroupNumber__c</fullName>
        <description>The SectionNumber, OptionNumber, and GroupNumber fields are used internally to sort the quote items within a solution.</description>
        <inlineHelpText>The SectionNumber, OptionNumber, and GroupNumber fields are used internally to sort the quote items within a solution.</inlineHelpText>
        <label>Group Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__HasSubLineWithoutListPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This attribute is set to true only if there is any subline linked to this quote line and the list price on any sub line is null.</description>
        <inlineHelpText>This attribute is set to true only if there is any subline linked to this quote line and the list price on any sub line is null.</inlineHelpText>
        <label>Has sub lines with no list price.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Id__c</fullName>
        <description>Unique ID for each record that can be used as an external ID for importing and exporting data.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this record.</inlineHelpText>
        <label>Quote Item ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__IsBelowLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates whether the quote item is a below-the-line recommendation. Items flagged shouldn&apos;t be included with final calculations.</description>
        <inlineHelpText>Flag indicates whether the quote item is a below-the-line recommendation. Items flagged shouldn&apos;t be included with final calculations.</inlineHelpText>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsInstallBase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether the main line is Install Base Relevant. Copied from MnCatalogNode__c when quote item is created.</description>
        <label>Install Base Relevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsReConfigRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates whether due to any dependency a re-configure of this configuration is required.</description>
        <inlineHelpText>Flag indicates whether due to any dependency a re-configure of this configuration is required.</inlineHelpText>
        <label>Re-Config Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsSystemCostPrice__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This attribute is to track if the Cost price was calculated by system or user entered. Value is false for user entered.</description>
        <inlineHelpText>This attribute is to track if the Cost price was calculated by system or user entered. Value is false for user entered.</inlineHelpText>
        <label>Is Cost Price System populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsSystemListPrice__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This attribute is to track if the List price was calculated by system or user entered. Value is false for user entered.</description>
        <inlineHelpText>This attribute is to track if the List price was calculated by system or user entered. Value is false for user entered.</inlineHelpText>
        <label>Is List Price System populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__IsSystemUnitPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This attribute is to track if the Unit price was calculated by system or user entered. Value is false for user entered.</description>
        <inlineHelpText>This attribute is to track if the Unit price was calculated by system or user entered. Value is false for user entered.</inlineHelpText>
        <label>Is Unit Price System populated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__Is_Configuration_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates whether the configuration is complete for a configurable product.</description>
        <inlineHelpText>Flag indicates whether the configuration is complete for a configurable product.</inlineHelpText>
        <label>Needs Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__ItemOption__c</fullName>
        <description>JSON representation of the quote item in quote model.</description>
        <inlineHelpText>JSON representation of the quote item in quote model. Useful for debugging quote level pricing rules.</inlineHelpText>
        <label>Option Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REVVY__LineType__c</fullName>
        <label>Tracked On</label>
        <picklist>
            <picklistValues>
                <fullName>Not tracked on contract</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__MainItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique ID of the main quote item for this quote item.</description>
        <inlineHelpText>Unique ID of the main quote item for this quote item.</inlineHelpText>
        <label>Main Quote Item</label>
        <referenceTo>REVVY__MnQuoteItem__c</referenceTo>
        <relationshipLabel>RelatedQuoteItems</relationshipLabel>
        <relationshipName>RelatedQuoteItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__MarginAbsolute__c</fullName>
        <description>Absolute value of the margin</description>
        <inlineHelpText>Absolute value of the margin</inlineHelpText>
        <label>Margin (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__MarginType__c</fullName>
        <description>Determines whether the Margin is based on percentage  (e.g., 20%) or on an absolute amount(e.g., $100).</description>
        <inlineHelpText>Determines whether the Margin is based on percentage  (e.g., 20%) or on an absolute amount(e.g., $100).</inlineHelpText>
        <label>Margin Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Margin__c</fullName>
        <description>Percent value of the margin</description>
        <inlineHelpText>Percent value of the margin</inlineHelpText>
        <label>Margin ( % )</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Adjustment1_Absolute_F__c</fullName>
        <description>Adjustment (Abs) that is applied to a regular product that is billed Monthly. If the product is configurable, then the Monthly adjustment field is the adjustment on all sub-lines (e.g., the components) that are billed Monthly, including the adjustment on the main line if the main line is billed Monthly.</description>
        <formula>REVVY__Monthly_Value_Before_Discount_F__c - REVVY__Monthly_Total_Cost_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate adjustment1 on products that are billed on a Monthly basis, shown in currency.</inlineHelpText>
        <label>Monthly Mark-ups (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Adjustment1_F__c</fullName>
        <description>Adjustment (%) that is applied to a regular product that is billed Monthly. If the product is configurable, then the Monthly adjustment field is the adjustment on all sub-lines (e.g., the components) that are billed Monthly, including the adjustment on the main line if the main line is billed Monthly.</description>
        <formula>IF (BLANKVALUE(REVVY__Monthly_Cost_Price_Before_Adjustment_F__c,0)==0, 0,(REVVY__Monthly_Value_Before_Discount_F__c - REVVY__Monthly_Total_Cost_F__c)/REVVY__Monthly_Total_Cost_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adjustment that is applied to a regular product that is billed Monthly. If the product is configurable, then the Monthly adjustment field is the adjustment on all sub-lines that are billed Monthly, including the adjustment on the main line</inlineHelpText>
        <label>Monthly Mark-ups (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Cost_Price_Before_Adjustment_F__c</fullName>
        <description>Cost price of this product before adjustment. If the product is configurable, the cost price includes all sub-lines that are billed on a Monthly basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;Monthly&apos;, IF(ISBLANK(REVVY__CostPrice__c) &amp;&amp; ISBLANK(REVVY__Monthly_Cost_Price_Before_Adjustment_S__c),null,BLANKVALUE(REVVY__CostPrice__c, 0) + BLANKVALUE(REVVY__Monthly_Cost_Price_Before_Adjustment_S__c, 0)), REVVY__Monthly_Cost_Price_Before_Adjustment_S__c)</formula>
        <inlineHelpText>Cost price of this product before adjustment. If the product is configurable, the cost price includes all sub-lines that are billed on a Monthly basis.</inlineHelpText>
        <label>Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Cost_Price_Before_Adjustment_S__c</fullName>
        <description>Aggregate cost price of all sub-lines in a configurable product that are billed on a Monthly basis.</description>
        <inlineHelpText>Aggregate cost price of all sub-lines in a configurable product that are billed on a Monthly basis.</inlineHelpText>
        <label>Monthly Cost including sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Discount_Absolute_F__c</fullName>
        <description>Discount (Abs) that is applied to a regular product that is billed monthly. If the product is configurable, then the monthly discount field is the discount on all sub-lines (e.g., the components) that are billed monthly, including the discount on the main line if the main line is billed monthly.</description>
        <formula>REVVY__Monthly_Price_Before_Discount_F__c - REVVY__Monthly_Extended_Price_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate absolute discount on products that are billed on a monthly basis, shown in currency.</inlineHelpText>
        <label>Monthly Discounts (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Discount_F__c</fullName>
        <description>Discount (%) that is applied to a regular product that is billed monthly. If the product is configurable, then the monthly discount field is the discount on all sub-lines (e.g., the components) that are billed monthly, including the discount on the main line if the main line is billed monthly.</description>
        <formula>IF (BLANKVALUE(REVVY__Monthly_Price_Before_Discount_F__c,0)==0, 0,(REVVY__Monthly_Price_Before_Discount_F__c - REVVY__Monthly_Extended_Price_F__c)/REVVY__Monthly_Price_Before_Discount_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount applied to a regular product that is billed monthly. If the product is configurable, this is the discount on all sub-lines (e.g., components) that are billed monthly, including the discount on the main line if the main line is billed monthly.</inlineHelpText>
        <label>Monthly Discounts (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Extended_Price_F__c</fullName>
        <description>Sum of the aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed monthly, and the unit price of the configurable product, if the configurable product is billed monthly.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;Monthly&apos;,  BLANKVALUE(REVVY__Unit_Price__c, 0)  +  REVVY__Monthly_Extended_Price_S__c  , REVVY__Monthly_Extended_Price_S__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of the aggregate extended price of all components of a configurable product, where the components are billed monthly, and the unit price of the configurable product, if the configurable product is billed monthly.</inlineHelpText>
        <label>Monthly Extended Price incl. sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Extended_Price_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed monthly.</description>
        <inlineHelpText>Aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed monthly.</inlineHelpText>
        <label>Monthly Extended Price all sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Margin_Absolute_F__c</fullName>
        <description>Margin (Abs) that is applied to a regular product that is billed Monthly. If the product is configurable, then the Monthly margin field is the adjustment on all sub-lines (e.g., the components) that are billed Monthly, including the margin on the main line if the main line is billed Monthly.</description>
        <formula>REVVY__Monthly_Total_Value_F__c - REVVY__Monthly_Total_Cost_F__c</formula>
        <inlineHelpText>Aggregate margin on products that are billed on a Monthly basis, shown in currency.</inlineHelpText>
        <label>Monthly Margins (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Margin_F__c</fullName>
        <description>Margin (%) that is applied to a regular product that is billed Monthly. If the product is configurable, then the Monthly margin field is the adjustment on all sub-lines (e.g., the components) that are billed Monthly, including the margin on the main line if the main line is billed Monthly.</description>
        <formula>IF (BLANKVALUE(REVVY__Monthly_Total_Value_F__c,0)==0, 0,(REVVY__Monthly_Total_Value_F__c - (REVVY__Monthly_Cost_Price_Before_Adjustment_F__c  * REVVY__Quantity__c))/REVVY__Monthly_Total_Value_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Margin that is applied to a regular product that is billed Monthly. If the product is configurable, then the Monthly margin field is the adjustment on all sub-lines that are billed Monthly, including the margin on the main line</inlineHelpText>
        <label>Monthly Margins (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Price_Before_Discount_Display_F__c</fullName>
        <formula>REVVY__Monthly_Price_Before_Discount_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Price_Before_Discount_F__c</fullName>
        <description>List price of this product before discount. If the product is configurable, the list price includes all sub-lines that are billed on a monthly basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;Monthly&apos;,  BLANKVALUE(REVVY__Price__c, BLANKVALUE(REVVY__Unit_Price__c, 0))  +  REVVY__Monthly_Price_Before_Discount_S__c,  REVVY__Monthly_Price_Before_Discount_S__c)</formula>
        <inlineHelpText>List price of this product before discount. If the product is configurable, the list price includes all sub-lines that are billed on a monthly basis.</inlineHelpText>
        <label>Monthly List including sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Price_Before_Discount_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate list price of all sub-lines in a configurable product that are billed on a monthly basis, before any discounts are applied.</description>
        <inlineHelpText>Aggregate list price of all sub-lines in a configurable product that are billed on a monthly basis, before any discounts are applied.</inlineHelpText>
        <label>Monthly List all sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Total_Cost_F__c</fullName>
        <description>Aggregate cost price (cost x quantity) of all products that are billed on a Monthly basis.</description>
        <formula>REVVY__Monthly_Cost_Price_Before_Adjustment_F__c * REVVY__Quantity__c</formula>
        <inlineHelpText>Aggregate cost price (cost price x quantity) of all products that are billed on a Monthly basis.</inlineHelpText>
        <label>Total Monthly Cost Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Total_Value_Display_F__c</fullName>
        <formula>REVVY__Monthly_Total_Value_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Total Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Total_Value_F__c</fullName>
        <description>Aggregate extended price (unit price x quantity) of all products that are billed on a monthly basis after discounts have been applied.</description>
        <formula>REVVY__Monthly_Extended_Price_F__c * REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate extended price (unit price x quantity) of all products that are billed on a monthly basis after discounts have been applied.</inlineHelpText>
        <label>Monthly Total Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Unit_Price_F__c</fullName>
        <description>Unit price of this product. If the product is configurable, the unit price includes all sub-lines that are billed on a Monthly basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;Monthly&apos;, BLANKVALUE(REVVY__Unit_Price__c, 0) + REVVY__Monthly_Unit_Price_S__c, REVVY__Monthly_Unit_Price_S__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit price of this product. If the product is configurable, the unit price includes all sub-lines that are billed on a Monthly basis.</inlineHelpText>
        <label>Monthly Unit Price including sub-lines</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Unit_Price_S__c</fullName>
        <description>Aggregate unit price of all sub-lines in a configurable product that are billed on a Monthly basis.</description>
        <inlineHelpText>Aggregate unit price of all sub-lines in a configurable product that are billed on a Monthly basis.</inlineHelpText>
        <label>Monthly Unit Price all sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Monthly_Value_Before_Discount_F__c</fullName>
        <description>Aggregate extended price (unit price x quantity) of all products that are billed on a monthly basis before any discounts are applied.</description>
        <formula>REVVY__Monthly_Price_Before_Discount_F__c * REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate extended price (unit price x quantity) of all products that are billed on a monthly basis before any discounts are applied.</inlineHelpText>
        <label>Monthly Total List</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__NeedsApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether the quote requires approval. This flag is set based on the criteria specified in the approval process workflow.</description>
        <inlineHelpText>Flag that indicates whether the quote requires approval. This flag is set based on the criteria specified in the approval process workflow.</inlineHelpText>
        <label>Needs Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Adjustment1_Absolute_F__c</fullName>
        <description>Adjustment (Abs) that is applied to a regular product that is billed one time. If the product is configurable, then the one time adjustment field is the adjustment on all sub-lines (e.g., the components) that are billed one time, including the adjustment on the main line if the main line is billed one time.</description>
        <formula>REVVY__One_Time_Value_Before_Discount_F__c - REVVY__One_Time_Total_Cost_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate adjustment1 on products that are billed on a one-time basis, shown in currency.</inlineHelpText>
        <label>One-time Mark-ups (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Adjustment1_F__c</fullName>
        <description>Adjustment (%) that is applied to a regular product that is billed one time. If the product is configurable, then the one time adjustment field is the adjustment on all sub-lines (e.g., the components) that are billed one time, including the adjustment on the main line if the main line is billed one time.</description>
        <formula>IF (BLANKVALUE(REVVY__One_Time_Cost_Price_Before_Adjustment_F__c,0)==0, 0,(REVVY__One_Time_Value_Before_Discount_F__c - REVVY__One_Time_Total_Cost_F__c)/REVVY__One_Time_Total_Cost_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adjustment that is applied to a regular product that is billed one time. If the product is configurable, then the one time adjustment field is the adjustment on all sub-lines (e.g., the components) that are billed one time plus main line</inlineHelpText>
        <label>One-time Mark-ups (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Cost_Price_Before_Adjustment_F__c</fullName>
        <description>Cost price of this product before adjustment. If the product is configurable, the cost  price includes all sub-lines that are billed on a one-time basis.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;One Time&apos;, IF(ISBLANK(REVVY__CostPrice__c) &amp;&amp; ISBLANK(REVVY__One_Time_Cost_Price_Before_Adjustment_S__c),null,BLANKVALUE(REVVY__CostPrice__c, 0) + BLANKVALUE(REVVY__One_Time_Cost_Price_Before_Adjustment_S__c, 0)), REVVY__One_Time_Cost_Price_Before_Adjustment_S__c)</formula>
        <inlineHelpText>Cost price of this product before adjustment. If the product is configurable, the cost  price includes all sub-lines that are billed on a one-time basis.</inlineHelpText>
        <label>One-time Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Cost_Price_Before_Adjustment_S__c</fullName>
        <description>Aggregate cost price of all sub-lines in a configurable product that are billed on a one-time basis.</description>
        <inlineHelpText>Aggregate cost price of all sub-lines in a configurable product that are billed on a one-time basis.</inlineHelpText>
        <label>One-time Cost including sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Discount_Absolute_F__c</fullName>
        <description>Discount (Abs) that is applied to a regular product that is billed one time. If the product is configurable, then the one time discount field is the discount on all sub-lines (e.g., the components) that are billed one time, including the discount on the main line if the main line is billed one time.</description>
        <formula>REVVY__One_Time_Price_Before_Discount_F__c - REVVY__One_Time_Extended_Price_F__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregate discount on products that are billed on a one-time basis, shown in currency.</inlineHelpText>
        <label>One-time Discounts (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Discount_F__c</fullName>
        <description>Discount (%) that is applied to a regular product that is billed one time. If the product is configurable, then the one time discount field is the discount on all sub-lines (e.g., the components) that are billed one time, including the discount on the main line if the main line is billed one time.</description>
        <formula>IF (BLANKVALUE(REVVY__One_Time_Price_Before_Discount_F__c,0)==0, 0,(REVVY__One_Time_Price_Before_Discount_F__c - REVVY__One_Time_Extended_Price_F__c)/REVVY__One_Time_Price_Before_Discount_F__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount applied to a regular product that is billed one time. If the product is configurable, this is the discount on all sub-lines (e.g., components) that are billed one time, including the discount on the main line if the main line is billed one time.</inlineHelpText>
        <label>One-time Discounts (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Extended_Price_F__c</fullName>
        <description>Sum of the aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed one time, and the unit price of the configurable product, if the configurable product is billed one time.</description>
        <formula>CASE( REVVY__Billing_Frequency_WF__c , &apos;One Time&apos;, BLANKVALUE(REVVY__Unit_Price__c, 0) +  REVVY__One_Time_Extended_Price_S__c, REVVY__One_Time_Extended_Price_S__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of the aggregate extended price of all components of a configurable product, where the components are billed one time, and the unit price of the configurable product, if the configurable product is billed one time.</inlineHelpText>
        <label>One-time Extended Price incl. sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Extended_Price_S__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed one time.</description>
        <inlineHelpText>Aggregate extended price (extended price = unit price x quantity) of all components of a configurable product, where the components are billed one time.</inlineHelpText>
        <label>One-time Extended Price all sub-lines</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__One_Time_Margin_Absolute_F__c</fullName>
        <description>Margin (Abs) that is applied to a regular product that is billed one time. If the product is configurable, then the one time margin field is the adjustment on all sub-lines (e.g., the components) that are billed one time, including the margin on the main line if the main line is billed one time.</description>
        <formula>REVVY__One_Time_Total_Value_F__c - REVVY__One_Time_Total_Cost_F__c</formula>
        <inlineHelpText>Aggregate margin on products that are billed on a one-time basis, shown in currency.</inlineHelpText>
        <label>One-time Margins (Abs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>